test_src/compiler_errors/types/arithmetic/DivideBoolError3.b
class DivideBoolError3 {
    void test() {
        var value = 2;
        println(value /= true);
    }
}
